--- a/naver.html
+++ b/naver.html
@@ -4,11 +4,9 @@
 	<meta charset="UTF-8">
 	<title>RESTful API</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/start/jquery-ui.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script>jQuery.noConflict();</script>
-	<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 </head>
 <body>
@@ -19,7 +17,7 @@
 		<div style="margin-bottom: 20px;">
 			<form onsubmit="retrun false;" class="form-inline">
             	<input id="sch-text" type="text" class="form-control" placeholder="검색...">&nbsp;
-				<a href="#!" class="btn btn-primary" ng-click="newsSearch()">검색</a>
+				<a href="#!" class="btn btn-primary" ng-click="newsSearch()"><i class="fas fa-search"></i> 검색</a>
 			</form>
 		</div>
 		<div class="list">
